Fix calendar size on mobile

--- a/style.css
+++ b/style.css
@@ -92,6 +92,21 @@ a {
     border-bottom: solid 2px #990000;
 }
 
+.calendar-container {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+
+.calendar-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #shows td {
     font-size: 1em;
     padding: 10px;
